changed img dir

--- a/main.css
+++ b/main.css
@@ -10,9 +10,9 @@
 }
 
 body {
-  background-image: url("_img/5_1024.jpg/");
-  }
-  
+  background-image: url("img/5_1024.jpg/");
+}
+
 .header {
   font-size: 100px;
   font-weight: bold;
